--- a/css/css-skeletons.scss
+++ b/css/css-skeletons.scss
@@ -15,7 +15,7 @@
   width: var(--c-w);
   position: relative;
   background: var(--c-bg);
-  box-sizing: content-box !important;
+  box-sizing: border-box !important;
   --ln:linear-gradient(#000, #000);
   --circle: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%);
 
@@ -53,7 +53,7 @@
   }
 
   &#{$s}-line {
-    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)));
+    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)) + var(--c-p) * 2);
   
     &::before,
     &::after {
@@ -64,8 +64,8 @@
   }
 
   &#{$s}-circle {
-    width: var(--c-s);
-    height: var(--c-s);
+    width: calc(var(--c-s) + var(--c-p) * 2);
+    height: calc(var(--c-s) + var(--c-p) * 2);
   
     &::before,
     &::after {
@@ -76,7 +76,7 @@
   }
 
   &#{$s}-circle-line {
-    height: var(--c-s);
+    height: calc(var(--c-s) + var(--c-p) * 2);
   
     &::before,
     &::after {
@@ -90,7 +90,7 @@
   }
 
   &#{$s}-circle-multi-line {
-    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)));
+    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)) + var(--c-p) * 2);
   
     &::before,
     &::after {
@@ -101,7 +101,7 @@
     }
   
     &.adapt-to-circle {
-      height: var(--c-s);
+      height: calc(var(--c-s) + var(--c-p) * 2);
   
       &::before,
       &::after {
@@ -112,7 +112,7 @@
   }
 
   &#{$s}-rect {
-    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)) + var(--rect-h) + var(--g-gap));
+    height: calc((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1)) + var(--rect-h) + var(--g-gap) + var(--c-p) * 2);
   
     &::before,
     &::after {
@@ -126,7 +126,7 @@
   &#{$s}-chart-line {
     --chart-btm: 40px;
     --chart-h: 200px;
-    height: var(--chart-h);
+    height: calc(var(--chart-h) + var(--c-p) * 2);
     
     &::before,
     &::after {
@@ -146,8 +146,8 @@
     --col-gap: 25px;
     --o-l: calc(var(--col-w) + var(--col-gap)); // offset-left
     --chart-h: 200px;
-    height: var(--chart-h);
-    width: calc(((var(--cols) - 1) * var(--o-l)) + var(--col-w));
+    height: calc(var(--chart-h) + var(--c-p) * 2);
+    width: calc(((var(--cols) - 1) * var(--o-l)) + var(--col-w) + var(--c-p) * 2);
     
     &::before,
     &::after {
@@ -172,17 +172,18 @@
     --card-h:150px;
     --g-gap: 30px;
     --c-s: 30px;
-    height: var(--card-h);
-    --r-x:calc((var(--c-w) / 4) + var(--g-gap));
-    --l-x:calc((var(--c-w) / 4) + var(--g-gap) + var(--c-s) + var(--l-gap));
-    --l-w: calc((var(--c-w) - (var(--c-w) / 4 + (var(--g-gap) * 2) + (var(--l-gap) * 2) + var(--c-s) * 2)) / 2);
+    --c-w-o:(var(--c-w) - var(--c-p) * 2);
+    height: calc(var(--card-h) + var(--c-p) * 2);
+    --r-x:calc((var(--c-w-o) / 4) + var(--g-gap));
+    --l-x:calc((var(--c-w-o) / 4) + var(--g-gap) + var(--c-s) + var(--l-gap));
+    --l-w: calc((var(--c-w-o) - (var(--c-w-o) / 4 + (var(--g-gap) * 2) + (var(--l-gap) * 2) + var(--c-s) * 2)) / 2);
   
     &::before,
     &::after {
-      --m: var(--ln) 0 0 / calc(var(--c-w) / 4) var(--card-h),
-              var(--ln) calc((var(--c-w) / 4) + var(--g-gap)) 0 / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 5),
-              var(--ln) calc((var(--c-w) / 4) + var(--g-gap)) calc(var(--card-h) / 3) / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
-              var(--ln) calc((var(--c-w) / 4) + var(--g-gap)) calc(var(--card-h) / 1.8) / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
+      --m: var(--ln) 0 0 / calc(var(--c-w-o) / 4) var(--card-h),
+              var(--ln) calc((var(--c-w-o) / 4) + var(--g-gap)) 0 / calc(var(--c-w-o) - ((var(--c-w-o) / 4) + var(--g-gap))) calc(var(--card-h) / 5),
+              var(--ln) calc((var(--c-w-o) / 4) + var(--g-gap)) calc(var(--card-h) / 3) / calc(var(--c-w-o) - ((var(--c-w-o) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
+              var(--ln) calc((var(--c-w-o) / 4) + var(--g-gap)) calc(var(--card-h) / 1.8) / calc(var(--c-w-o) - ((var(--c-w-o) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
               var(--circle) var(--r-x) 100% / calc(var(--c-s)) calc(var(--c-s)),
               var(--ln) left var(--l-x) bottom calc((var(--c-s) - (var(--card-h) / 8)) / 2) / var(--l-w) calc(var(--card-h) / 8),
               var(--circle) calc(var(--l-x) + var(--l-w) + var(--g-gap)) 100% / calc(var(--c-s)) calc(var(--c-s)),
@@ -203,7 +204,7 @@
     --s-l-c: rgba(54,216,175,0.3);
     --s-l-m-t: 15px;
 
-    height: calc(var(--f-l-h) + var(--s-l-m-t) +  var(--s-l-h) + var(--g-gap) + ((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1))));
+    height: calc(var(--f-l-h) + var(--s-l-m-t) +  var(--s-l-h) + var(--g-gap) + ((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1))) + var(--c-p) * 2);
 
     &::before,
     &::after {
@@ -232,7 +233,7 @@
   &#{$s}-list {
     --b: calc(var(--l-h) * 1.4);
     --p: calc((var(--b) - var(--l-h)) / 2);
-    height: calc(var(--b) + ((var(--b) + var(--l-gap)) * (var(--lines) - 1)));
+    height: calc(var(--b) + ((var(--b) + var(--l-gap)) * (var(--lines) - 1)) + var(--c-p) * 2);
     
     &::before,
     &::after {
@@ -248,16 +249,15 @@
   &#{$s}-youtube {
     --g-gap: 10px;
     --rect-h: 150px;
-    --c-w: 270px;
     --c-s: 36px;
-    height: calc(var(--rect-h) + var(--g-gap) + var(--l-gap) + (var(--l-h) * 2));
+    height: calc(var(--rect-h) + var(--g-gap) + var(--l-gap) + (var(--l-h) * 2) + var(--c-p) * 2);
     
     &::before,
     &::after {
-      --m: var(--ln) 0 0 / 100% var(--rect-h) no-repeat,
-            var(--circle) 0 calc(var(--rect-h) + var(--g-gap)) / var(--c-s) var(--c-s) no-repeat,
-            var(--ln) calc(var(--c-s) + var(--g-gap)) calc(var(--rect-h) + var(--g-gap)) / calc((var(--c-w) - (var(--c-s) + var(--g-gap))) * 0.9) var(--l-h) no-repeat,
-            var(--ln) calc(var(--c-s) + var(--g-gap)) calc(var(--rect-h) + var(--g-gap) + var(--l-h) + var(--l-gap)) / calc((var(--c-w) - (var(--c-s) + var(--g-gap))) * 0.6) var(--l-h) no-repeat;
+      --m: var(--ln) 0 0 / 100% var(--rect-h),
+            var(--circle) 0 calc(var(--rect-h) + var(--g-gap)) / var(--c-s) var(--c-s),
+            var(--ln) calc(var(--c-s) + var(--g-gap)) calc(var(--rect-h) + var(--g-gap)) / calc(((var(--c-w) - var(--c-p) * 2) - (var(--c-s) + var(--g-gap))) * 0.85) var(--l-h),
+            var(--ln) calc(var(--c-s) + var(--g-gap)) calc(var(--rect-h) + var(--g-gap) + var(--l-h) + var(--l-gap)) / calc(((var(--c-w) - var(--c-p) * 2) - (var(--c-s) + var(--g-gap))) * 0.6) var(--l-h);
       -webkit-mask: var(--m);
               mask: var(--m);
       -webkit-mask-repeat: no-repeat;
